--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Wood-carving'
 - !lcc 'NK'
+- GITenberg
 title: 'Wood-Carving: Design and Workmanship'
 url: http://www.gutenberg.org/ebooks/22107
